containers/k8s/06-ingress.yaml
# 06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postiz-ingress
  namespace: postiz
  annotations:
    external-dns.alpha.kubernetes.io/hostname: social.kdvops.com
    external-dns.alpha.kubernetes.io/ttl: "120"
    # OPCIONAL: si quieres forzar un CNAME en lugar de A:
    external-dns.alpha.kubernetes.io/target: "silencfox.duckdns.org"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Entrar por HTTP y HTTPS (web, websecure)
    #traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  rules:
    - host: social.kdvops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postiz-app
                port:
                  number: 5000

  tls:
  - hosts:
    - social.kdvops.com
    secretName: social-kdvops-com-tls
